Remove the MacOS dylib for

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 message(STATUS "COMPILERSn Used")
 message(STATUS "CC = ${CMAKE_C_COMPILER}")
 message(STATUS "CXX= ${CMAKE_CXX_COMPILER}")
+message(STATUS "CMAKE_SHARED_LIBRARY_SUFFIX=${CMAKE_SHARED_LIBRARY_SUFFIX}")
 
 if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
 	message(STATUS  "GEMC requires an out-of-source build.")
